{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 20,
  "lineage": "c10931fa-0e22-7d58-ad63-1aac173f7160",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-079d967c18aef7829",
            "arn": "arn:aws:ec2:us-east-1:853463362119:elastic-ip/eipalloc-079d967c18aef7829",
            "association_id": "eipassoc-0c8dda593c7a7e0f6",
            "domain": "vpc",
            "id": "eipalloc-079d967c18aef7829",
            "network_border_group": "us-east-1",
            "network_interface": "eni-051071c457281b17d",
            "private_dns": "ip-10-0-0-193.ec2.internal",
            "private_ip": "10.0.0.193",
            "public_dns": "ec2-34-238-99-114.compute-1.amazonaws.com",
            "public_ip": "34.238.99.114",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "linguallearn-nat-eip-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "linguallearn-nat-eip-dev",
              "Project": "LinguaLearn-AI"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:853463362119:internet-gateway/igw-033d444031a3a27a1",
            "id": "igw-033d444031a3a27a1",
            "owner_id": "853463362119",
            "tags": {
              "Name": "linguallearn-igw-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "linguallearn-igw-dev",
              "Project": "LinguaLearn-AI"
            },
            "vpc_id": "vpc-0097ba5f218a2f6c5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-079d967c18aef7829",
            "association_id": "eipassoc-0c8dda593c7a7e0f6",
            "connectivity_type": "public",
            "id": "nat-084a4b9b4652ed24e",
            "network_interface_id": "eni-051071c457281b17d",
            "private_ip": "10.0.0.193",
            "public_ip": "34.238.99.114",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ffc004ad99e5685d",
            "tags": {
              "Name": "linguallearn-nat-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "linguallearn-nat-dev",
              "Project": "LinguaLearn-AI"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:853463362119:route-table/rtb-02f6ed79a090b77e4",
            "id": "rtb-02f6ed79a090b77e4",
            "owner_id": "853463362119",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-084a4b9b4652ed24e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "linguallearn-private-rt-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "linguallearn-private-rt-dev",
              "Project": "LinguaLearn-AI"
            },
            "timeouts": null,
            "vpc_id": "vpc-0097ba5f218a2f6c5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:853463362119:route-table/rtb-0ab199ab1200de0db",
            "id": "rtb-0ab199ab1200de0db",
            "owner_id": "853463362119",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-033d444031a3a27a1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "linguallearn-public-rt-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "linguallearn-public-rt-dev",
              "Project": "LinguaLearn-AI"
            },
            "timeouts": null,
            "vpc_id": "vpc-0097ba5f218a2f6c5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-098baff6076adc00b",
            "route_table_id": "rtb-02f6ed79a090b77e4",
            "subnet_id": "subnet-094d50eb25668cac2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-084530cee13c7406a",
            "route_table_id": "rtb-02f6ed79a090b77e4",
            "subnet_id": "subnet-068a8fafaf4774022"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-088f59ebc4d90803c",
            "route_table_id": "rtb-0ab199ab1200de0db",
            "subnet_id": "subnet-0ffc004ad99e5685d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048e93a4f57e010c6",
            "route_table_id": "rtb-0ab199ab1200de0db",
            "subnet_id": "subnet-071a67850e51ff98f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:853463362119:security-group/sg-03d9640374deb5153",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03d9640374deb5153",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere (redirect to HTTPS)",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "linguallearn-alb-sg-dev",
            "name_prefix": "",
            "owner_id": "853463362119",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "linguallearn-alb-sg-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "linguallearn-alb-sg-dev",
              "Project": "LinguaLearn-AI"
            },
            "timeouts": null,
            "vpc_id": "vpc-0097ba5f218a2f6c5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:853463362119:security-group/sg-056ea63ec4775d610",
            "description": "Security group for EC2 API server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-056ea63ec4775d610",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from specific IP (optional - add your IP)",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "API traffic from ALB",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03d9640374deb5153"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "linguallearn-ec2-sg-dev",
            "name_prefix": "",
            "owner_id": "853463362119",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "linguallearn-ec2-sg-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "linguallearn-ec2-sg-dev",
              "Project": "LinguaLearn-AI"
            },
            "timeouts": null,
            "vpc_id": "vpc-0097ba5f218a2f6c5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:853463362119:security-group/sg-0856290216da6dc0a",
            "description": "Security group for Lambda functions",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0856290216da6dc0a",
            "ingress": [],
            "name": "linguallearn-lambda-sg-dev",
            "name_prefix": "",
            "owner_id": "853463362119",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "linguallearn-lambda-sg-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "linguallearn-lambda-sg-dev",
              "Project": "LinguaLearn-AI"
            },
            "timeouts": null,
            "vpc_id": "vpc-0097ba5f218a2f6c5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:853463362119:security-group/sg-0fee9606fe28f7290",
            "description": "Security group for RDS PostgreSQL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fee9606fe28f7290",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from EC2",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-056ea63ec4775d610"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "linguallearn-rds-sg-dev",
            "name_prefix": "",
            "owner_id": "853463362119",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "linguallearn-rds-sg-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "linguallearn-rds-sg-dev",
              "Project": "LinguaLearn-AI"
            },
            "timeouts": null,
            "vpc_id": "vpc-0097ba5f218a2f6c5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ec2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:853463362119:subnet/subnet-094d50eb25668cac2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-094d50eb25668cac2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "853463362119",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "linguallearn-private-subnet-1-dev",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "linguallearn-private-subnet-1-dev",
              "Project": "LinguaLearn-AI",
              "Type": "Private"
            },
            "vpc_id": "vpc-0097ba5f218a2f6c5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:853463362119:subnet/subnet-068a8fafaf4774022",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-068a8fafaf4774022",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "853463362119",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "linguallearn-private-subnet-2-dev",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "linguallearn-private-subnet-2-dev",
              "Project": "LinguaLearn-AI",
              "Type": "Private"
            },
            "vpc_id": "vpc-0097ba5f218a2f6c5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:853463362119:subnet/subnet-0ffc004ad99e5685d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ffc004ad99e5685d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "853463362119",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "linguallearn-public-subnet-1-dev",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "linguallearn-public-subnet-1-dev",
              "Project": "LinguaLearn-AI",
              "Type": "Public"
            },
            "vpc_id": "vpc-0097ba5f218a2f6c5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:853463362119:subnet/subnet-071a67850e51ff98f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-071a67850e51ff98f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "853463362119",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "linguallearn-public-subnet-2-dev",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "linguallearn-public-subnet-2-dev",
              "Project": "LinguaLearn-AI",
              "Type": "Public"
            },
            "vpc_id": "vpc-0097ba5f218a2f6c5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:853463362119:vpc/vpc-0097ba5f218a2f6c5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0457ae95fecf3169e",
            "default_route_table_id": "rtb-0aa57a4bf001d2992",
            "default_security_group_id": "sg-02e54da89e1adfa10",
            "dhcp_options_id": "dopt-049d6af58d1d84cc4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0097ba5f218a2f6c5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0aa57a4bf001d2992",
            "owner_id": "853463362119",
            "tags": {
              "Name": "linguallearn-vpc-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "linguallearn-vpc-dev",
              "Project": "LinguaLearn-AI"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}